# python-teaching-platform

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.django  Dockerfile.web-student  QWEN.md  README.md  convert_problems.py  docker-compose.yml  pnpm-lock.yaml  shell.nix  test-foldable-blocks.md  功能文档.md  部署文档(非docker部署).md
backend/: .gitignore  pyproject.toml  start.sh  test_logging.py  test_users.csv
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_avatar.py  0003_membershiptype_subscription.py  0004_auto_20251208_0413.py
backend/accounts/tests/: __init__.py  conftest.py  factories.py  test_auth_views.py  test_membership_views.py  test_models.py  test_password_hashing.py  test_password_views.py  test_permissions.py  test_serializers.py  (+1 more)
backend/commerce/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/common/: exceptions.py  serializers.py
backend/core/: celery.py  settings.py  urls.py
backend/courses/: admin.py  apps.py  models.py  pagination.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/docs/: USER_ISOLATED_CACHE_HTTP_CACHING_FIX.md  cache-invalidation-best-practices.md  cache-performance-logging.md
backend/file_management/: admin.py  api_documentation.md  mixins.py  models.py  path_utils.py  permissions.py  serializers.py  storages.py  tests.py  unified_api_documentation.md  urls.py  views.py
backend/logs/: .gitkeep
backend/performance/: __init__.py  apps.py
backend/progress/: models.py
frontend/JupyterLite/: .jupyterlite.doit.db  build.sh  environment.yml  jupyter-lite.json  jupyter_lite_config.json  overrides.json  pyproject.toml
(+1083 files in other folders)
