[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested-routers>=0.95.0",
    "requests>=2.32.5",
    "Faker>=28.1.0",
    "django-storages[boto3]>=1.14.4",
    "django-filter>=25.2",
    "openpyxl>=3.1.5",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.11",
    "gunicorn>=23.0.0",
    "redis>=5.2.0",
    "django-redis>=5.4.0",
    "alipay-sdk-python>=3.7.868",
    "celery>=5.6.0",
    "django-cors-headers>=4.9.0",
    "GitPython>=3.1.40",
    "PyYAML>=6.0",
    "python-json-logger>=4.0.0",
]
