[project]
name = "jupyterlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipympl>=0.9.8",
    "jupyterlab-language-pack-zh-cn>=4.4.post3",
    "jupyterlab-server>=2.28.0",
    "jupyterlite-core>=0.7.0",
    "jupyterlite-pyodide-kernel>=0.7.0",
]
