[project]
name = "jupyterlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab-language-pack-zh-cn>=4.4.post3",
    "jupyterlab-server>=2.28.0",
    "jupyterlite-core>=0.7.0",
    "jupyterlite-sync-to-server",
    "jupyterlite-xeus>=4.3.4",
    "libarchive-c>=5.3",
    "notebook>=7.5.0",
]

[tool.uv.sources]
jupyterlite-sync-to-server = { git = "https://github.com/TianTianHang/jupyterlite-sync-to-server.git" }
